Starts work on bluetooth discovery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="cijena">Cijena</string>
     <string name="otkazi">Otkazi</string>
     <string name="spremi">Spremi</string>
+    <string name="pair_new_printer">Pair new Printer</string>
+    <string name="bluetooth_will_turn_on_to_pair">Bluetooth will turn on to pair</string>
+    <string name="no_bluetooth">Bluetooth isn\'t supported on this device</string>
 
     <string-array name="array_kolicina">
         <item>Komad(kom)</item>
