Fixes some bugs, Fine tuning the item_checkout design Deletes the checkout table contents if we successfully print

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="print">Print</string>
     <string name="print_checkout">Printaj racun?</string>
     <string name="printing">PRINTANJE</string>
+    <string name="article_name">Ime Artikla</string>
 
     <string-array name="array_kolicina">
         <item>Komad(kom)</item>
