Adds badge implementation to checkout fragment Adds 100 g to "array_kolicina" Minor tweaks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
         <item>Komad(kom)</item>
         <item>Litra(l)</item>
         <item>200g</item>
+        <item>100g</item>
         <item>Piece</item>
         <item>0.75l</item>
         <item>1dcl</item>
