Adds emptyscreen for article list

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="artikli">Artikli</string>
     <string name="spoji">Spoji</string>
     <string name="add_article">Dodaj Artikl</string>
-    <string name="nema_artikala_kreiraj_novi">Nema artikala,\nkreiraj novi</string>
+    <string name="no_articles_create_new">Nema artikala,\nkreiraj novi</string>
     <string name="naziv_proizvoda">Naziv Proizvoda</string>
     <string name="cijena">Cijena</string>
     <string name="otkazi">Otkazi</string>
