Adds new empty fragments

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
         <item>2dcl</item>
 
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="history">Povijest</string>
+    <string name="settings">Postavke</string>
 </resources>
