--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="history">Povijest</string>
     <string name="settings">Postavke</string>
+    <string name="last_updated">Last Updated</string>
 </resources>
