--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="history">Povijest</string>
     <string name="settings">Postavke</string>
     <string name="last_updated">Last Updated</string>
+    <string name="calendar">Calendar</string>
+    <string name="number">Broj</string>
+    <string name="date">Datum</string>
+    <string name="amount">Iznos</string>
 </resources>
