Minor work on history feature

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="number">Broj</string>
     <string name="date">Datum</string>
     <string name="amount">Iznos</string>
+    <string name="no_receipts">Nema racuna, odaberite datum</string>
 </resources>
