--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">ParagonLite</string>
-    <string name="kasa">Kasa</string>
-    <string name="artikli">Artikli</string>
-    <string name="spoji">Spoji</string>
-    <string name="add_article">Dodaj Artikl</string>
-    <string name="no_articles_create_new">Nema artikala,\nkreiraj novi</string>
-    <string name="naziv_proizvoda">Naziv Proizvoda</string>
-    <string name="cijena">Cijena</string>
-    <string name="otkazi">Otkazi</string>
-    <string name="spremi">Spremi</string>
+    <string name="checkout">Checkout</string>
+    <string name="articles">Articles</string>
+    <string name="connect">Connect</string>
+    <string name="add_article">Add Article</string>
+    <string name="no_articles_create_new">No articles,\nCreate a new one</string>
+    <string name="name_of_article">Name of the article</string>
+    <string name="price">Price</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
     <string name="pair_new_printer">Pair new Printer</string>
     <string name="bluetooth_will_turn_on_to_pair">Bluetooth will turn on to pair</string>
     <string name="no_bluetooth">Bluetooth isn\'t supported on this device</string>
@@ -19,21 +19,18 @@
     </string>
     <string name="printer_name">Printer name:</string>
     <string name="mac_address">MAC Address</string>
-    <string name="mac_address_saved">Adresa uspjesno spasena</string>
-    <string name="printer_save_error">Doslo je do pogreske kod spremanja printera!</string>
+    <string name="mac_address_saved">MAC Address Saved</string>
+    <string name="printer_save_error">An error occurred while saving the printer!</string>
     <string name="print">Print</string>
-    <string name="print_checkout">Printaj racun?</string>
-    <string name="printing">PRINTANJE</string>
-    <string name="article_name">Ime Artikla</string>
-    <string name="start_search">Pocni pretrazivanje</string>
-    <string name="no_saved_bluetooth_address_warning">Nismo nasli spremljenu bluetooth adresu, molimo spojite se na
-        printer.
-    </string>
-    <string name="add_bluetooth_devices">Dodaj Bluetooth Uredaje</string>
+    <string name="print_checkout">Print receipt?</string>
+    <string name="printing">PRINTING</string>
+    <string name="article_name">Article Name</string>
+    <string name="start_search">Start Search</string>
+    <string name="no_saved_bluetooth_address_warning">No saved bluetooth address found, please pair with a bluetooth printer</string>
+    <string name="add_bluetooth_devices">Add bluetooth device</string>
 
     <string-array name="quantity_array">
-        <item>Komad(kom)</item>
-        <item>Litra(l)</item>
+        <item>Liter(l)</item>
         <item>200g</item>
         <item>100g</item>
         <item>Piece</item>
@@ -44,20 +41,23 @@
 
     <string name="hello_blank_fragment">BLANK FRAGMENT</string>
 
-    <string name="history">Povijest</string>
-    <string name="settings">Postavke</string>
+    <string name="history">History</string>
+    <string name="settings">Settings</string>
     <string name="last_updated">Last Updated</string>
     <string name="calendar">Calendar</string>
-    <string name="number">Broj</string>
-    <string name="date">Datum</string>
-    <string name="amount">Iznos</string>
-    <string name="no_receipts">Nema racuna, odaberite datum</string>
-    <string name="article_saved_successfully">Artikl uspjesno spremljen</string>
-    <string name="article_save_error">Doslo je do pogreske kod spremanja artikla!</string>
-    <string name="error_occurred">Doslo je do pogreske!</string>
-    <string name="article_successfully_created">Artikl Uspjesno Kreiran</string>
-    <string name="article_successfully_deleted">Artikl uspjesno pobrisan!</string>
+    <string name="number">Number</string>
+    <string name="date">Date</string>
+    <string name="amount">Amount</string>
+    <string name="no_receipts">No receipts, select a date</string>
+    <string name="article_saved_successfully">Article saved successfully</string>
+    <string name="article_save_error">An error occurred while saving the article!</string>
+    <string name="error_occurred">Unknown error occurred, please try again later!</string>
+    <string name="article_successfully_created">Article successfully created</string>
+    <string name="article_successfully_deleted">Article successfully deleted!</string>
     <string name="total_amount">Total: %1$s</string>
     <string name="ok">OK</string>
+    <string name="bluetooth_canceled">Bluetooth activation canceled, you can enable it by clicking the button below</string>
+    <string name="enable_bluetooth">Enable bluetooth</string>
+    <string name="bluetooth_status">Bluetooth Status</string>
 
 </resources>
